cmake_minimum_required(VERSION 3.22)
project(CS323_DZ10)

set(CMAKE_CXX_STANDARD 14)

add_executable(CS323_DZ10 main.cpp zadatak1/Student.cpp zadatak1/Student.h zadatak1/BachelorStudent.cpp zadatak1/BachelorStudent.h zadatak2/ATM.cpp zadatak2/ATM.h zadatak2/atms/IntesaATM.cpp zadatak2/atms/IntesaATM.h zadatak2/atms/ErsteATM.cpp zadatak2/atms/ErsteATM.h zadatak2/User.cpp zadatak2/User.h)
